Added debug print of MQTT event

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,15 +13,13 @@ platform = espressif8266
 framework = arduino
 board = esp12e
 platform_packages = 
-; NodeMCU
-upload_port = /dev/ttyUSB1
-monitor_port = /dev/ttyUSB1
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
-; Test board
-;upload_port = /dev/ttyUSB3
-;monitor_port = /dev/ttyUSB3
-;monitor_speed = 74880
+lib_deps = 
+	grodansparadis/VscpTcpClient@^1.1.2
+	knolleary/PubSubClient@^2.8
+	milesburton/DallasTemperature@^3.9.1
 
-; lib_ignore = 
-;   DallasTemperature
-;   OneWire
+[platformio]
+description = A simple proximity sensor demo project for VSCP (https://www.vscp.org)
