--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,5 @@
 // AUTOMATICALLY GENERATED FILE. PLEASE DO NOT MODIFY IT MANUALLY
-
+//
 // PIO Unified Debugger
 //
 // Documentation: https://docs.platformio.org/page/plus/debugging.html
@@ -12,19 +12,21 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/home/akhe/development/VSCP/vscp-demo-mailbox-control/.pio/build/esp01/firmware.elf",
+            "executable": "/home/akhe/development/VSCP/vscp-demo-proximity-sensor/.pio/build/esp01/firmware.elf",
+            "projectEnvName": "esp01",
             "toolchainBinDir": "/home/akhe/.platformio/packages/toolchain-xtensa/bin",
+            "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
-            },
-            "internalConsoleOptions": "openOnSessionStart"
+            }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/home/akhe/development/VSCP/vscp-demo-mailbox-control/.pio/build/esp01/firmware.elf",
+            "executable": "/home/akhe/development/VSCP/vscp-demo-proximity-sensor/.pio/build/esp01/firmware.elf",
+            "projectEnvName": "esp01",
             "toolchainBinDir": "/home/akhe/.platformio/packages/toolchain-xtensa/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
